fix: 상장 폐지 로직 제거