@@ -1,29 +1,21 @@
 package codesquad.fineants.domain.stock.service;
 
 import java.time.LocalDate;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import codesquad.fineants.domain.dividend.repository.StockDividendRepository;
 import codesquad.fineants.domain.dividend.service.StockDividendService;
-import codesquad.fineants.domain.holding.domain.entity.PortfolioHolding;
-import codesquad.fineants.domain.holding.repository.PortfolioHoldingRepository;
 import codesquad.fineants.domain.kis.repository.ClosingPriceRepository;
 import codesquad.fineants.domain.kis.repository.CurrentPriceRepository;
-import codesquad.fineants.domain.purchasehistory.repository.PurchaseHistoryRepository;
+import codesquad.fineants.domain.kis.service.KisService;
 import codesquad.fineants.domain.stock.domain.dto.request.StockSearchRequest;
 import codesquad.fineants.domain.stock.domain.dto.response.StockDataResponse;
 import codesquad.fineants.domain.stock.domain.dto.response.StockRefreshResponse;
 import codesquad.fineants.domain.stock.domain.dto.response.StockResponse;
 import codesquad.fineants.domain.stock.domain.dto.response.StockSearchItem;
-import codesquad.fineants.domain.stock.domain.dto.response.StockSectorResponse;
 import codesquad.fineants.domain.stock.domain.entity.Stock;
 import codesquad.fineants.domain.stock.repository.StockQueryRepository;
 import codesquad.fineants.domain.stock.repository.StockRepository;
@@ -37,28 +29,25 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 public class StockService {
 	private final StockRepository stockRepository;
-	private final PortfolioHoldingRepository portfolioHoldingRepository;
-	private final PurchaseHistoryRepository purchaseHistoryRepository;
-	private final StockDividendRepository stockDividendRepository;
 	private final CurrentPriceRepository currentPriceRepository;
 	private final ClosingPriceRepository closingPriceRepository;
-	private final KrxService krxService;
 	private final StockDividendService stockDividendService;
 	private final StockQueryRepository stockQueryRepository;
+	private final KisService kisService;
 
 	@Transactional(readOnly = true)
 	public List<StockSearchItem> search(StockSearchRequest request) {
 		return stockRepository.search(request.getSearchTerm())
 			.stream()
 			.map(StockSearchItem::from)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Transactional(readOnly = true)
 	public List<StockSearchItem> search(String tickerSymbol, int size, String keyword) {
 		return stockQueryRepository.getSliceOfStock(tickerSymbol, size, keyword).stream()
 			.map(StockSearchItem::from)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Transactional(readOnly = true)
@@ -70,8 +59,8 @@ public class StockService {
 
 	@Scheduled(cron = "0 0 8 * * ?") // 매일 오전 8시 (초, 분, 시간)
 	@Transactional
-	public void scheduledRefreshStocks() {
-		StockRefreshResponse response = refreshStocks();
+	public void scheduledReloadStocks() {
+		StockRefreshResponse response = this.reloadStocks();
 		log.info("refreshStocks response : {}", response);
 		stockDividendService.refreshStockDividend(LocalDate.now());
 		stockDividendService.writeDividendCsvToS3();
@@ -79,98 +68,14 @@ public class StockService {
 
 	// 최신 종목을 조회하고 데이터베이스의 종목 데이터들을 최신화한다
 	@Transactional
-	public StockRefreshResponse refreshStocks() {
-		// TODO: kis 서버를 이용하여 상장된 종목과 폐지된 종목을 조회한다
-		CompletableFuture<Set<StockDataResponse.StockIntegrationInfo>> future = CompletableFuture.supplyAsync(
-			krxService::fetchStockInfo
-		).thenCombine(CompletableFuture.supplyAsync(krxService::fetchSectorInfo),
-			(latestStocks, sectorMap) ->
-				latestStocks.parallelStream()
-					.map(stock -> StockDataResponse.StockIntegrationInfo.from(stock,
-						sectorMap.getOrDefault(stock.getTickerSymbol(), StockSectorResponse.SectorInfo.empty())
-							.getSector()))
-					.collect(Collectors.toSet())
-		);
-
-		// 기존 종목 정보 조회
-		Set<StockDataResponse.StockIntegrationInfo> existStocks = stockRepository.findAll().parallelStream()
-			.map(StockDataResponse.StockIntegrationInfo::from)
-			.collect(Collectors.toSet());
-
-		// 최신 종목 정보 조회
-		Set<StockDataResponse.StockIntegrationInfo> latestStocks = future.join();
-
-		// 종목 제거
-		List<String> delTickerSymbols = removeDelistedStocksAndAssociatedData(existStocks, latestStocks);
-		log.debug("delTickerSymbols count {}", delTickerSymbols.size());
-
-		// 종목 저장
-		List<String> newlyAddedTickerSymbols = saveNewlyAddedStocks(latestStocks, existStocks);
-		log.debug("newlyAddedTickerSymbols count {}", newlyAddedTickerSymbols.size());
-
-		return StockRefreshResponse.create(newlyAddedTickerSymbols, delTickerSymbols);
-	}
-
-	/**
-	 * 상장 폐지된 종목들을 대상으로 db에 저장된 연관 데이터들을 삭제합니다.
-	 * 연관 데이터들은 매입 이력, 포트폴리오에 등록된 종목, 종목 배당금, 종목이 해당됩니다.
-	 * @param initialStockInfos 기존 종목 데이터
-	 * @param latestStocks // 최신 종목 데이터
-	 * @return 삭제된 종목의 티커 심볼 리스트
-	 */
-	private List<String> removeDelistedStocksAndAssociatedData(
-		Set<StockDataResponse.StockIntegrationInfo> initialStockInfos,
-		Set<StockDataResponse.StockIntegrationInfo> latestStocks) {
-		Set<StockDataResponse.StockIntegrationInfo> delistedStocks = new HashSet<>(initialStockInfos);
-		delistedStocks.removeAll(latestStocks);
-
-		List<String> delTickerSymbols = delistedStocks.stream()
-			.map(StockDataResponse.StockIntegrationInfo::getTickerSymbol)
-			.collect(Collectors.toList());
-		List<PortfolioHolding> holdings = portfolioHoldingRepository.findAllByTickerSymbolsWithStockAndPurchaseHistory(
-			delTickerSymbols);
-		List<Long> holdingIds = holdings.stream()
-			.map(PortfolioHolding::getId)
-			.collect(Collectors.toList());
-		// 매입 이력 제거
-		int delCount = purchaseHistoryRepository.deleteAllByHoldingIds(holdingIds);
-		log.debug("delete purchaseHistory count {}", delCount);
-
-		// 포트폴리오 종목 제거
-		delCount = portfolioHoldingRepository.deleteAllByIdIn(holdingIds);
-		log.debug("delete portfolioHolding count {}", delCount);
-
-		// 종목 배당금 제거
-		delCount = stockDividendRepository.deleteByTickerSymbols(delTickerSymbols);
-		log.debug("delete stockDividend count {}", delCount);
-
-		// 종목 제거
-		delCount = stockRepository.deleteByTickerSymbols(delTickerSymbols);
-		log.debug("delete stock count {}", delCount);
-		return delTickerSymbols;
-	}
-
-	/**
-	 * 새로 상장된 종목들을 대상으로 db에 저장합니다.
-	 * @param latestStocks 최신 종목 데이터
-	 * @param existStocks 기존 종목 데이터
-	 * @return 상장된 종목의 티커 심볼 리스트
-	 */
-	private List<String> saveNewlyAddedStocks(Set<StockDataResponse.StockIntegrationInfo> latestStocks,
-		Set<StockDataResponse.StockIntegrationInfo> existStocks) {
-		// 새로 상장된 종목 파싱
-		Set<StockDataResponse.StockIntegrationInfo> newlyAddedStocks = new HashSet<>(latestStocks);
-		newlyAddedStocks.removeAll(existStocks);
-		log.debug("newlyAddedStocks count {}", newlyAddedStocks.size());
-
-		// 상장된 종목 추가
-		List<Stock> stocks = newlyAddedStocks.parallelStream()
-			.map(StockDataResponse.StockIntegrationInfo::toEntity)
-			.collect(Collectors.toList());
-		log.debug("stocks count {}", stocks.size());
-
-		return stockRepository.saveAll(stocks).parallelStream()
+	public StockRefreshResponse reloadStocks() {
+		// 상장 종목 조회 후 저장
+		List<String> newlyAddedTickerSymbols = stockRepository.saveAll(kisService.fetchStockInfoInRangedIpo().stream()
+				.map(StockDataResponse.StockIntegrationInfo::toEntity)
+				.toList()).stream()
 			.map(Stock::getTickerSymbol)
-			.collect(Collectors.toList());
+			.toList();
+		log.debug("newlyAddedTickerSymbols count {}", newlyAddedTickerSymbols.size());
+		return StockRefreshResponse.create(newlyAddedTickerSymbols);
 	}
 }
